Switch to pickle for hyperparameters

--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -277,41 +277,9 @@
     "    'goal': 'minimize'\n",
     "    }\n",
     "sweep_config['metric'] = metric\n",
-    "parameters_dict = {\n",
-    "    'kernel_size': {\n",
-    "        'values': [3, 4, 5]\n",
-    "    },\n",
-    "    'activation_fn': {\n",
-    "        'values': ['ReLU', 'Sigmoid']\n",
-    "    },\n",
-    "    'epochs_choice': {\n",
-    "          'values': [5, 10, 20]\n",
-    "    },\n",
-    "    'learning_rate': {\n",
-    "        'values': [1e-4, 1e-3, 1e-2]\n",
-    "    },\n",
-    "    'batch_size': {\n",
-    "        'values': [4]\n",
-    "    },\n",
-    "}\n",
     "\n",
-    "parameters_dict = {\n",
-    "    'kernel_size': {\n",
-    "        'values': [3]\n",
-    "    },\n",
-    "    'activation_fn': {\n",
-    "        'values': ['ReLU']\n",
-    "    },\n",
-    "    'epochs_choice': {\n",
-    "          'values': [5]\n",
-    "    },\n",
-    "    'learning_rate': {\n",
-    "        'values': [1e-4]\n",
-    "    },\n",
-    "    'batch_size': {\n",
-    "        'values': [4]\n",
-    "    },\n",
-    "}\n",
+    "with open('hyper.pkl', 'rb') as f:\n",
+    "    parameters_dict = pickle.load(f)\n",
     "\n",
     "sweep_config['parameters'] = parameters_dict"
    ]
