--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -24,7 +24,9 @@
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import r2_score\n",
     "from Savio_Dataset import CustomDataset\n",
-    "from Networks import ConvNetScalarLabel, count_parameters"
+    "from Networks import ConvNetScalarLabel, count_parameters\n",
+    "import pickle\n",
+    "import argparse"
    ]
   },
   {
@@ -263,6 +265,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "55b9b022-618b-4ade-918e-4c23f1c147d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument('--file', type = str, required = True)\n",
+    "args = parser.parse_args()\n",
+    "hyperparameter_filename = args.file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2403886e-355f-4658-8199-aebb835516bd",
    "metadata": {
     "tags": []
@@ -278,7 +293,7 @@
     "    }\n",
     "sweep_config['metric'] = metric\n",
     "\n",
-    "with open('hyper.pkl', 'rb') as f:\n",
+    "with open(hyperparameter_filename, 'rb') as f:\n",
     "    parameters_dict = pickle.load(f)\n",
     "\n",
     "sweep_config['parameters'] = parameters_dict"
