add float casting for MSELoss

--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "        # Compute loss and its gradients\n",
     "        # print('label shape', labels.shape)\n",
-    "        loss = loss_fn(outputs, labels)\n",
+    "        loss = loss_fn(outputs, labels.float())\n",
     "        loss.backward()\n",
     "\n",
     "        # Adjust learning weights\n",
@@ -230,7 +230,7 @@
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
     "        outputs = model(inputs)\n",
-    "        loss = loss_fn(outputs, labels)\n",
+    "        loss = loss_fn(outputs, labels.float())\n",
     "        testing_loss += loss.item()\n",
     "\n",
     "        y_true.extend(labels.cpu().numpy().tolist())\n",
