add parameter count for savio

--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -61,6 +61,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abf21583-bf95-4ade-b3a5-ed34b0a4075b",
+   "metadata": {},
+   "source": [
+    "# Calculate number of parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fc53581-bf99-451d-be42-0b3d310e8994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_parameters(ConvNetScalarLabel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "45ca78b2-c4d7-42d8-9892-f9208ea51be7",
    "metadata": {},
    "source": [
