Add model parameter logging

--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -213,6 +213,7 @@
     "        activation_fn = nn.Sigmoid()\n",
     "    \n",
     "    model = ConvNetScalarLabel(kernel_size = config.kernel_size, activation_fn = activation_fn).to(device)\n",
+    "    print(count_parameters(model))\n",
     "    \n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr = config.learning_rate, momentum = 0.9)\n",
     "\n",
