--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -391,6 +391,7 @@
     "def evaluate(config = None):\n",
     "    loss_fn = nn.MSELoss()\n",
     "    model = train(config, loss_fn)\n",
+    "    torch.save(model, 'model.pt')\n",
     "    avg_loss_per_batch_test, testing_loss, r2 = test(config, model, loss_fn)\n",
     "    wandb.log({'avg_loss_per_batch_test': avg_loss_per_batch_test, 'testing_loss': testing_loss, 'r2': r2})"
    ]
