add time for savio

--- a/U-Net/Savio 3D CNN.ipynb
+++ b/U-Net/Savio 3D CNN.ipynb
@@ -26,7 +26,8 @@
     "from Savio_Dataset import CustomDataset\n",
     "from Networks import ConvNetScalarLabel, count_parameters\n",
     "import pickle\n",
-    "import argparse"
+    "import argparse\n",
+    "import time"
    ]
   },
   {
@@ -218,9 +219,11 @@
     "    optimizer = torch.optim.SGD(model.parameters(), lr = config.learning_rate, momentum = 0.9)\n",
     "\n",
     "    for epoch in range(config.epochs_choice):\n",
+    "        tic = time.time()\n",
     "        avg_loss_per_batch, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
-    "        wandb.log({'avg_loss_per_batch': avg_loss_per_batch, 'cumulative_loss': cumulative_loss})\n",
-    "        print(f'Loss for epoch {epoch}: {cumulative_loss}')\n",
+    "        toc = time.time()\n",
+    "        wandb.log({'avg_loss_per_batch': avg_loss_per_batch, 'cumulative_loss': cumulative_loss, 'time': toc - tic})\n",
+    "        print(f'Loss for epoch {epoch}: {cumulative_loss}, time for epoch {epoch}: {toc - tic}')\n",
     "    \n",
     "    return model"
    ]
