cleanup, add savio_diff

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "749177ff-3ed3-4933-af1a-e96497bd2301",
-   "metadata": {},
-   "source": [
-    "TODO: test batch size other than 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "585941ef-25c1-463d-b168-39ce2b474ce1",
    "metadata": {},
    "source": [
@@ -278,8 +270,6 @@
     "\n",
     "        # Compute loss and its gradients\n",
     "        # print('label shape', labels.shape)\n",
-    "        # print('outputs:', outputs)\n",
-    "        # print('labels:', labels)\n",
     "        loss = loss_fn(outputs, labels.float())\n",
     "        loss.backward()\n",
     "\n",
@@ -324,6 +314,7 @@
     "        activation_fn = nn.Sigmoid()\n",
     "    \n",
     "    model = ConvNetScalarLabel(kernel_size = config.kernel_size, activation_fn = activation_fn).to(device)\n",
+    "    print(count_parameters(model))\n",
     "    \n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr = config.learning_rate, momentum = 0.9)\n",
     "\n",
@@ -494,7 +485,18 @@
       "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 5, 'kernel_size': 5, 'learning_rate': 0.0001}\n",
       "Loading samples 0 through 999\n",
       "Processing sample number 0\n",
-      "Loading samples 1000 through 1999\n"
+      "Loading samples 1000 through 1999\n",
+      "Processing sample number 1000\n",
+      "Loading samples 2000 through 2999\n",
+      "Processing sample number 2000\n",
+      "Loading samples 3000 through 3999\n",
+      "Processing sample number 3000\n",
+      "Loading samples 4000 through 4999\n",
+      "Processing sample number 4000\n",
+      "Loading samples 5000 through 5999\n",
+      "Processing sample number 5000\n",
+      "Loading samples 6000 through 6999\n",
+      "Processing sample number 6000\n"
      ]
     }
    ],
