redo savio script

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -23,11 +23,11 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import r2_score\n",
-    "from Savio_Dataset import CustomDataset\n",
+    "from BinvoxDataset import CustomDataset\n",
     "from Networks import ConvNetScalarLabel, count_parameters\n",
+    "import time\n",
     "import pickle\n",
-    "import argparse\n",
-    "import time"
+    "import argparse"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf21583-bf95-4ade-b3a5-ed34b0a4075b",
+   "id": "4e0be766-26cc-41d8-a476-f652fb68d147",
    "metadata": {},
    "source": [
     "# Calculate number of parameters"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc53581-bf99-451d-be42-0b3d310e8994",
+   "id": "e8c7b0f4-03b1-4189-9755-486c35c73fc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +140,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd170337-3ce8-47cf-b19b-763e7fc07f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(dataset_val)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "99138ba4-a9d8-4108-96da-6b503e54c7f1",
    "metadata": {},
@@ -196,7 +206,7 @@
    "source": [
     "def train(config, loss_fn):\n",
     "    # initialize a wandb run\n",
-    "    wandb.init(config = config, name = '3D CNN Testing')\n",
+    "    wandb.init(config = config)\n",
     "\n",
     "    # copy the config\n",
     "    config = wandb.config\n",
@@ -222,8 +232,8 @@
     "        tic = time.time()\n",
     "        avg_loss_per_batch, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'avg_loss_per_batch': avg_loss_per_batch, 'cumulative_loss': cumulative_loss, 'time': toc - tic})\n",
-    "        print(f'Loss for epoch {epoch}: {cumulative_loss}, time for epoch {epoch}: {toc - tic}')\n",
+    "        wandb.log({'avg_loss_per_batch': avg_loss_per_batch, 'cumulative_loss': cumulative_loss, 'time': round(toc - tic)})\n",
+    "        print(f'Loss for epoch {epoch}: {cumulative_loss}, time for epoch {epoch}: {round(toc - tic)}')\n",
     "    \n",
     "    return model"
    ]
@@ -272,6 +282,7 @@
     "def evaluate(config = None):\n",
     "    loss_fn = nn.MSELoss()\n",
     "    model = train(config, loss_fn)\n",
+    "    torch.save(model, 'model.pt')\n",
     "    avg_loss_per_batch_test, testing_loss, r2 = test(config, model, loss_fn)\n",
     "    wandb.log({'avg_loss_per_batch_test': avg_loss_per_batch_test, 'testing_loss': testing_loss, 'r2': r2})"
    ]
@@ -287,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b9b022-618b-4ade-918e-4c23f1c147d6",
+   "id": "e38a6355-707c-42fd-ba04-c9dd8a4f1c77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +349,7 @@
    },
    "outputs": [],
    "source": [
-    "sweep_id = wandb.sweep(sweep_config, project = 'PAPER')"
+    "sweep_id = wandb.sweep(sweep_config, project = 'CNN_sweep_scalar')"
    ]
   },
   {
@@ -352,14 +363,6 @@
    "source": [
     "wandb.agent(sweep_id = sweep_id, function = evaluate)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2d71f0e-e630-4491-85ad-6182de3cd2e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
