Change to parameters_dict_list

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -304,6 +304,7 @@
    "source": [
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--file', type = str, required = True)\n",
+    "parser.add_argument('--set', type = int, required = True)\n",
     "args = parser.parse_args()\n",
     "hyperparameter_filename = args.file"
    ]
@@ -327,7 +328,7 @@
     "sweep_config['metric'] = metric\n",
     "\n",
     "with open(hyperparameter_filename, 'rb') as f:\n",
-    "    parameters_dict = pickle.load(f)\n",
+    "    parameters_dict_list = pickle.load(f)[args.set]\n",
     "\n",
     "sweep_config['parameters'] = parameters_dict"
    ]
