switch to hyperparameter argument parsing

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -26,7 +26,6 @@
     "from BinvoxDataset import CustomDataset\n",
     "from Networks import ConvNetScalarLabel, count_parameters\n",
     "import time\n",
-    "import pickle\n",
     "import argparse"
    ]
   },
@@ -303,10 +302,12 @@
    "outputs": [],
    "source": [
     "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument('--file', type = str, required = True)\n",
-    "parser.add_argument('--set', type = int, required = True)\n",
-    "args = parser.parse_args()\n",
-    "hyperparameter_filename = args.file"
+    "parser.add_argument('--kernel_size', type = int, required = True)\n",
+    "parser.add_argument('--activation_fn', type = str, required = True)\n",
+    "parser.add_argument('--epochs_choice', type = int, required = True)\n",
+    "parser.add_argument('--learning_rate', type = float, required = True)\n",
+    "parser.add_argument('--batch_size', type = int, required = True)\n",
+    "args = parser.parse_args()"
    ]
   },
   {
@@ -327,8 +328,23 @@
     "    }\n",
     "sweep_config['metric'] = metric\n",
     "\n",
-    "with open(hyperparameter_filename, 'rb') as f:\n",
-    "    parameters_dict_list = pickle.load(f)[args.set]\n",
+    "parameters_dict = {\n",
+    "    'kernel_size': {\n",
+    "        'values': [args.kernel_size]\n",
+    "    },\n",
+    "    'activation_fn': {\n",
+    "        'values': [args.activation_fn]\n",
+    "    },\n",
+    "    'epochs_choice': {\n",
+    "          'values': [args.epochs_choice]\n",
+    "    },\n",
+    "    'learning_rate': {\n",
+    "        'values': [args.learning_rate]\n",
+    "    },\n",
+    "    'batch_size': {\n",
+    "        'values': [args.batch_size]\n",
+    "    },\n",
+    "}\n",
     "\n",
     "sweep_config['parameters'] = parameters_dict"
    ]
