Make ready for savio runs

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -23,7 +23,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import r2_score\n",
-    "from BinvoxDataset import CustomDataset\n",
+    "from Savio_Dataset import CustomDataset\n",
     "from Networks import ConvNetScalarLabel, count_parameters\n",
     "import time\n",
     "import argparse"
@@ -205,7 +205,7 @@
    "source": [
     "def train(config, loss_fn):\n",
     "    # initialize a wandb run\n",
-    "    wandb.init(config = config)\n",
+    "    wandb.init(config = config, name = '3D CNN Testing')\n",
     "\n",
     "    # copy the config\n",
     "    config = wandb.config\n",
@@ -366,7 +366,7 @@
    },
    "outputs": [],
    "source": [
-    "sweep_id = wandb.sweep(sweep_config, project = 'CNN_sweep_scalar')"
+    "sweep_id = wandb.sweep(sweep_config, project = 'PAPER')"
    ]
   },
   {
