local runs update

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -63,6 +63,13 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mchangli_824\u001b[0m (\u001b[33madditive-parts\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
@@ -191,8 +198,8 @@
    "outputs": [],
    "source": [
     "# Small values of max_count is for debugging and testing. Use max_count = None for full runs for training data.\n",
-    "dataset = CustomDataset(input_folder_path = train_folder_path, input_folder_name = train_folder_name, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 1000, label_type = label_type)\n",
-    "dataset_val = CustomDataset(input_folder_path = test_folder_path, input_folder_name = test_folder_name, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 1000, label_type = label_type)"
+    "dataset = CustomDataset(input_folder_path = train_folder_path, input_folder_name = train_folder_name, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 500, label_type = label_type)\n",
+    "dataset_val = CustomDataset(input_folder_path = test_folder_path, input_folder_name = test_folder_name, label_file_path = label_file_path, transform = transform, max_count = None, ram_limit = 500, label_type = label_type)"
    ]
   },
   {
@@ -404,7 +411,7 @@
     "sweep_config['metric'] = metric\n",
     "parameters_dict = {\n",
     "    'kernel_size': {\n",
-    "        'values': [5, 3]\n",
+    "        'values': [3]\n",
     "    },\n",
     "    'activation_fn': {\n",
     "        'values': ['ReLU']\n",
@@ -461,8 +468,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create sweep with ID: bjytna70\n",
-      "Sweep URL: https://wandb.ai/additive-parts/CNN_sweep_scalar/sweeps/bjytna70\n"
+      "Create sweep with ID: gsng4sjr\n",
+      "Sweep URL: https://wandb.ai/additive-parts/CNN_sweep_scalar/sweeps/gsng4sjr\n"
      ]
     }
    ],
@@ -472,31 +479,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fec8f8da-e378-4181-8bcc-fc83a0a26754",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.3"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>C:\\Users\\silly bb\\Desktop\\Capstone\\CNN\\U-Net\\wandb\\run-20240303_131342-rxpdt6yj</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/additive-parts/CNN_sweep_scalar/runs/rxpdt6yj' target=\"_blank\">lyric-sweep-6</a></strong> to <a href='https://wandb.ai/additive-parts/CNN_sweep_scalar' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/additive-parts/CNN_sweep_scalar/sweeps/gsng4sjr' target=\"_blank\">https://wandb.ai/additive-parts/CNN_sweep_scalar/sweeps/gsng4sjr</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/additive-parts/CNN_sweep_scalar' target=\"_blank\">https://wandb.ai/additive-parts/CNN_sweep_scalar</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View sweep at <a href='https://wandb.ai/additive-parts/CNN_sweep_scalar/sweeps/gsng4sjr' target=\"_blank\">https://wandb.ai/additive-parts/CNN_sweep_scalar/sweeps/gsng4sjr</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/additive-parts/CNN_sweep_scalar/runs/rxpdt6yj' target=\"_blank\">https://wandb.ai/additive-parts/CNN_sweep_scalar/runs/rxpdt6yj</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 5, 'kernel_size': 5, 'learning_rate': 0.0001}\n",
-      "Loading samples 0 through 999\n",
-      "Processing sample number 0\n",
-      "Loading samples 1000 through 1999\n",
-      "Processing sample number 1000\n",
-      "Loading samples 2000 through 2999\n",
-      "Processing sample number 2000\n",
-      "Loading samples 3000 through 3999\n",
-      "Processing sample number 3000\n",
-      "Loading samples 4000 through 4999\n",
-      "Processing sample number 4000\n",
-      "Loading samples 5000 through 5999\n",
-      "Processing sample number 5000\n",
-      "Loading samples 6000 through 6999\n",
-      "Processing sample number 6000\n"
+      "config: {'activation_fn': 'ReLU', 'batch_size': 4, 'epochs_choice': 15, 'kernel_size': 3, 'learning_rate': 1e-05}\n",
+      "+--------------------+------------+\n",
+      "|      Modules       | Parameters |\n",
+      "+--------------------+------------+\n",
+      "| layers.0.0.weight  |     54     |\n",
+      "| layers.0.1.weight  |     2      |\n",
+      "|  layers.0.1.bias   |     2      |\n",
+      "| layers.2.0.weight  |    216     |\n",
+      "| layers.2.1.weight  |     4      |\n",
+      "|  layers.2.1.bias   |     4      |\n",
+      "| layers.4.0.weight  |    864     |\n",
+      "| layers.4.1.weight  |     8      |\n",
+      "|  layers.4.1.bias   |     8      |\n",
+      "| layers.6.0.weight  |    6912    |\n",
+      "| layers.6.1.weight  |     32     |\n",
+      "|  layers.6.1.bias   |     32     |\n",
+      "| layers.8.0.weight  |   110592   |\n",
+      "| layers.8.1.weight  |    128     |\n",
+      "|  layers.8.1.bias   |    128     |\n",
+      "| layers.10.0.weight |   884736   |\n",
+      "| layers.10.1.weight |    256     |\n",
+      "|  layers.10.1.bias  |    256     |\n",
+      "|  linear_1.weight   |    4096    |\n",
+      "|   linear_1.bias    |     16     |\n",
+      "|  linear_2.weight   |     16     |\n",
+      "|   linear_2.bias    |     1      |\n",
+      "+--------------------+------------+\n",
+      "Total Trainable Params: 1008363\n",
+      "1008363\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 0: 528.602385036429, time for epoch 0: 1794\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 1: 347.04452166885676, time for epoch 1: 1786\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 2: 298.3085218421329, time for epoch 2: 1788\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 3: 317.29870247455983, time for epoch 3: 1788\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 4: 271.4445565488495, time for epoch 4: 1793\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 5: 263.69596515341436, time for epoch 5: 1793\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 6: 244.93031768261426, time for epoch 6: 1793\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 7: 229.1313455896816, time for epoch 7: 1806\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 8: 203.98843985319036, time for epoch 8: 1890\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 9: 190.54875551522855, time for epoch 9: 1872\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 10: 179.3672607952758, time for epoch 10: 1852\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 11: 171.53720883871574, time for epoch 11: 2019\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 12: 163.81804167746668, time for epoch 12: 1804\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 13: 160.0300581182746, time for epoch 13: 2467\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n",
+      "Processing sample 15000\n",
+      "Processing sample 17500\n",
+      "Processing sample 20000\n",
+      "Loss for epoch 14: 155.34091477944094, time for epoch 14: 2249\n",
+      "Processing sample 0\n",
+      "Processing sample 2500\n",
+      "Processing sample 5000\n",
+      "Processing sample 7500\n",
+      "Processing sample 10000\n",
+      "Processing sample 12500\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>█▅▄▄▃▃▃▂▂▂▁▁▁▁▁</td></tr><tr><td>avg_loss_per_batch_test</td><td>▁</td></tr><tr><td>batch loss</td><td>█▃▂▁▂▄▃▃▃▂▄▁▃▂▁▂▃▁▁▃▂▁▂▂▂▂▂▁▁▂▂▁▁▂▄▂▁▁▂▁</td></tr><tr><td>cumulative_loss</td><td>█▅▄▄▃▃▃▂▂▂▁▁▁▁▁</td></tr><tr><td>r2</td><td>▁</td></tr><tr><td>testing_loss</td><td>▁</td></tr><tr><td>time</td><td>▁▁▁▁▁▁▁▁▂▂▂▃▁█▆</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>avg_loss_per_batch</td><td>0.02791</td></tr><tr><td>avg_loss_per_batch_test</td><td>0.07773</td></tr><tr><td>batch loss</td><td>0.01802</td></tr><tr><td>cumulative_loss</td><td>155.34091</td></tr><tr><td>r2</td><td>0.15561</td></tr><tr><td>testing_loss</td><td>270.95577</td></tr><tr><td>time</td><td>2249</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">lyric-sweep-6</strong> at: <a href='https://wandb.ai/additive-parts/CNN_sweep_scalar/runs/rxpdt6yj' target=\"_blank\">https://wandb.ai/additive-parts/CNN_sweep_scalar/runs/rxpdt6yj</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20240303_131342-rxpdt6yj\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Waiting for job.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Sweep Agent: Exiting.\n"
      ]
     }
    ],
