Switch to L1Loss for savio

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -279,11 +279,11 @@
    "outputs": [],
    "source": [
     "def evaluate(config = None):\n",
-    "    loss_fn = nn.MSELoss()\n",
+    "    loss_fn = nn.L1Loss()\n",
     "    model = train(config, loss_fn)\n",
     "    torch.save(model, 'model.pt')\n",
-    "    avg_loss_per_batch_test, testing_loss, r2 = test(config, model, loss_fn)\n",
-    "    wandb.log({'avg_loss_per_batch_test': avg_loss_per_batch_test, 'testing_loss': testing_loss, 'r2': r2})"
+    "    avg_loss, testing_loss, r2 = test(config, model, loss_fn)\n",
+    "    wandb.log({'avg_loss': avg_loss, 'testing_loss': testing_loss, 'r2': r2})"
    ]
   },
   {
