clean up logging and naming

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -327,10 +327,10 @@
     "\n",
     "    for epoch in range(config.epochs_choice):\n",
     "        tic = time.time()\n",
-    "        avg_loss_per_batch, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
+    "        train_loss, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'avg_loss_per_batch': avg_loss_per_batch, 'cumulative_loss': cumulative_loss, 'time': round(toc - tic)})\n",
-    "        print(f'Loss for epoch {epoch}: {cumulative_loss}, time for epoch {epoch}: {round(toc - tic)}')\n",
+    "        wandb.log({'train_loss': train_loss, 'cumulative_loss': cumulative_loss, 'time': round(toc - tic)})\n",
+    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss}, time for epoch {epoch}: {round(toc - tic)}')\n",
     "    \n",
     "    return model"
    ]
@@ -344,27 +344,27 @@
    },
    "outputs": [],
    "source": [
-    "def test(config, model, loss_fn):\n",
+    "def validate(config, model, loss_fn):\n",
     "    # copy the config\n",
     "    config = wandb.config\n",
     "    \n",
-    "    # get testing loader\n",
-    "    testing_loader = DataLoader(dataset_val, batch_size = config.batch_size, shuffle = False)\n",
+    "    # get validation loader\n",
+    "    validation_loader = DataLoader(dataset_val, batch_size = config.batch_size, shuffle = False)\n",
     "    \n",
-    "    testing_loss = 0.0\n",
+    "    validation_loss = 0.0\n",
     "    y_true = []\n",
     "    y_pred = []\n",
-    "    for i, data in enumerate(testing_loader):\n",
+    "    for i, data in enumerate(validation_loader):\n",
     "        inputs, labels = data\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
     "        outputs = model(inputs)\n",
     "        loss = loss_fn(outputs, labels.float())\n",
-    "        testing_loss += loss.item()\n",
+    "        validation_loss += loss.item()\n",
     "\n",
     "        y_true.extend(labels.cpu().numpy().tolist())\n",
     "        y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
-    "    return testing_loss / len(testing_loader), testing_loss, r2_score(y_true = y_true, y_pred = y_pred)"
+    "    return validation_loss / len(validation_loader), r2_score(y_true = y_true, y_pred = y_pred)"
    ]
   },
   {
@@ -380,8 +380,8 @@
     "    loss_fn = nn.MSELoss()\n",
     "    model = train(config, loss_fn)\n",
     "    torch.save(model, 'model.pt')\n",
-    "    avg_loss_per_batch_test, testing_loss, r2 = test(config, model, loss_fn)\n",
-    "    wandb.log({'avg_loss_per_batch_test': avg_loss_per_batch_test, 'testing_loss': testing_loss, 'r2': r2})"
+    "    validation_loss, r2 = validate(config, model, loss_fn)\n",
+    "    wandb.log({'validation_loss': validation_loss, 'r2': r2})"
    ]
   },
   {
@@ -405,7 +405,7 @@
     "    'method': 'grid'\n",
     "    }\n",
     "metric = {\n",
-    "    'name': 'testing_loss',\n",
+    "    'name': 'validation_loss',\n",
     "    'goal': 'minimize'\n",
     "    }\n",
     "sweep_config['metric'] = metric\n",
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
