add loss summing

--- a/U-Net/CNN scalar custom loading.ipynb
+++ b/U-Net/CNN scalar custom loading.ipynb
@@ -377,7 +377,7 @@
    "outputs": [],
    "source": [
     "def evaluate(config = None):\n",
-    "    loss_fn = nn.MSELoss()\n",
+    "    loss_fn = nn.L1Loss(reduction = 'sum')\n",
     "    model = train(config, loss_fn)\n",
     "    torch.save(model, 'model.pt')\n",
     "    validation_loss, r2 = validate(config, model, loss_fn)\n",
