--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "def evaluate(config = None):\n",
-    "    loss_fn = nn.L1Loss()\n",
+    "    loss_fn = nn.L1Loss(reduction = 'sum')\n",
     "    model = train(config, loss_fn)\n",
     "    torch.save(model, 'model.pt')\n",
     "    validation_loss, r2 = validate(config, model, loss_fn)\n",
