correct loss calculation

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -187,6 +187,7 @@
     "        # Adjust learning weights\n",
     "        optimizer.step()\n",
     "\n",
+    "        # Increment by the mean loss of the batch\n",
     "        cumulative_loss += loss.item()\n",
     "        \n",
     "        wandb.log({'batch loss': loss.item()})\n",
@@ -231,8 +232,8 @@
     "        tic = time.time()\n",
     "        train_loss, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'train_loss': train_loss, 'cumulative_loss': cumulative_loss, 'time': round(toc - tic)})\n",
-    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss}, time for epoch {epoch}: {round(toc - tic)}')\n",
+    "        wandb.log({'train_loss': train_loss, 'cumulative_loss': cumulative_loss * config.batch_size, 'time': round(toc - tic)})\n",
+    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss * config.batch_size}, time for epoch {epoch}: {round(toc - tic)}')\n",
     "    \n",
     "    return model"
    ]
@@ -279,7 +280,7 @@
    "outputs": [],
    "source": [
     "def evaluate(config = None):\n",
-    "    loss_fn = nn.L1Loss(reduction = 'sum')\n",
+    "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
     "    model = train(config, loss_fn)\n",
     "    torch.save(model, 'model.pt')\n",
     "    validation_loss, r2 = validate(config, model, loss_fn)\n",
